--- a/create.html
+++ b/create.html
@@ -137,8 +137,6 @@
                 </select>
                 <span id="status-buttons" style="margin-left:10px;"></span>
             </label>
-            <br><br>
-
             <button class="bx--btn bx--btn--sm bx--btn--secondary" id="toggle-preview" style="color:white;">
                 <svg fill="white" class="icon-eye" xmlns="http://www.w3.org/2000/svg" 
                     viewBox="0 0 32 32" width="16" height="16" aria-hidden="true" focusable="false" 
@@ -147,7 +145,6 @@
                 </svg>
                 Hide Preview
             </button>
-            <br><br>
 
             <script>
                 const eyeIcon = `<path d="M30.94,15.66A16.69,16.69,0,0,0,16,5,16.69,16.69,0,0,0,1.06,15.66a1,1,0,0,0,0,.68A16.69,16.69,0,0,0,16,27,16.69,16.69,0,0,0,30.94,16.34,1,1,0,0,0,30.94,15.66ZM16,25c-5.3,0-10.9-3.93-12.93-9C5.1,10.93,10.7,7,16,7s10.9,3.93,12.93,9C26.9,21.07,21.3,25,16,25Z"/><path d="M16,10a6,6,0,1,0,6,6A6,6,0,0,0,16,10Zm0,10a4,4,0,1,1,4-4A4,4,0,0,1,16,20Z"/>`;
@@ -703,7 +700,7 @@ $(function () {
               class="bx--btn__icon">
               <path d="M24,14H22V8A6,6,0,0,0,10,8v6H8a2,2,0,0,0-2,2V28a2,2,0,0,0,2,2H24a2,2,0,0,0,2-2V16A2,2,0,0,0,24,14ZM12,8a4,4,0,0,1,8,0v6H12ZM24,28H8V16H24Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
             </svg>
-            Publish draft privately
+            Approve privately
           </button>
           <button class="bx--btn bx--btn--sm bx--btn--primary" id="request-publication">
             <svg
@@ -717,7 +714,7 @@ $(function () {
               class="bx--btn__icon">
               <path d="M27.45,15.11l-22-11a1,1,0,0,0-1.08.12,1,1,0,0,0-.33,1L7,16,4,26.74A1,1,0,0,0,5,28a1,1,0,0,0,.45-.11l22-11a1,1,0,0,0,0-1.78Zm-20.9,10L8.76,17H18V15H8.76L6.55,6.89,24.76,16Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
             </svg>
-            Request Publication
+            Request publish
           </button>
         `);
 
