--- a/create.html
+++ b/create.html
@@ -134,9 +134,9 @@
                     <option value="private">Private</option>
                     <option value="reviewing">Reviewing</option>
                     <option value="public">Public</option>
-                </select>
+                </select><br><br>
                 <span id="status-buttons" style="margin-left:10px;"></span>
-            </label>
+            </label><br><br>
             <button class="bx--btn bx--btn--sm bx--btn--secondary" id="toggle-preview" style="color:white;">
                 <svg fill="white" class="icon-eye" xmlns="http://www.w3.org/2000/svg" 
                     viewBox="0 0 32 32" width="16" height="16" aria-hidden="true" focusable="false" 
@@ -144,7 +144,7 @@
                     <path d="M28.28,27.71l-22-22L4.86,7.14,7.6,9.88A16.44,16.44,0,0,0,1.06,15.66a1,1,0,0,0,0,.68A16.69,16.69,0,0,0,16,27a15.89,15.89,0,0,0,7.12-1.69l3,3Zm-8.45-8.45,1.6,1.6A7,7,0,0,1,16,23c-5.3,0-10.9-3.93-12.93-9A14.63,14.63,0,0,1,9.6,11.41l1.69,1.69A7,7,0,0,0,16,21,6.93,6.93,0,0,0,19.83,19.26Z"/>
                 </svg>
                 Hide Preview
-            </button>
+            </button><br><br>
 
             <script>
                 const eyeIcon = `<path d="M30.94,15.66A16.69,16.69,0,0,0,16,5,16.69,16.69,0,0,0,1.06,15.66a1,1,0,0,0,0,.68A16.69,16.69,0,0,0,16,27,16.69,16.69,0,0,0,30.94,16.34,1,1,0,0,0,30.94,15.66ZM16,25c-5.3,0-10.9-3.93-12.93-9C5.1,10.93,10.7,7,16,7s10.9,3.93,12.93,9C26.9,21.07,21.3,25,16,25Z"/><path d="M16,10a6,6,0,1,0,6,6A6,6,0,0,0,16,10Zm0,10a4,4,0,1,1,4-4A4,4,0,0,1,16,20Z"/>`;
