--- a/create.html
+++ b/create.html
@@ -134,7 +134,7 @@
                     <option value="private">Private</option>
                     <option value="reviewing">Reviewing</option>
                     <option value="public">Public</option>
-                </select><br><br>
+                </select>
                 <span id="status-buttons" style="margin-left:10px;"></span>
             </label><br><br>
             <button class="bx--btn bx--btn--sm bx--btn--secondary" id="toggle-preview" style="color:white;">
