bugfix user parent

--- a/create.html
+++ b/create.html
@@ -658,14 +658,14 @@ $("#editor, #controls").on("input change keyup", "input, select, textarea", func
 <script>
 // Handle moderation flow
 $(function () {
-    // Ensure window.currentUser exists
-    if (!window.currentUser || !window.currentUser.role) {
-        console.warn("User data not available. Defaulting to 'user'.");
-        window.currentUser = { role: "user" };
+    // Get the user from parent window
+    let userFromParent = { role: "user" }; // fallback
+    if (parent && parent.window && parent.window.currentUser) {
+        userFromParent = parent.window.currentUser;
     }
 
-    const userRole = window.currentUser.role;
-    console.log("Current user role:", userRole);
+    const userRole = userFromParent.role;
+    console.log("Current user role (from parent):", userRole);
 
     if (userRole !== "admin") {
         // Disable options not allowed for regular users
@@ -696,7 +696,7 @@ $(function () {
               class="bx--btn__icon">
               <path d="M27.45,15.11l-22-11a1,1,0,0,0-1.08.12,1,1,0,0,0-.33,1L7,16,4,26.74A1,1,0,0,0,5,28a1,1,0,0,0,.45-.11l22-11a1,1,0,0,0,0-1.78Zm-20.9,10L8.76,17H18V15H8.76L6.55,6.89,24.76,16Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
             </svg>
-            Request publish
+            Request publication
           </button>
         `);
 
