test publication status json

--- a/create.html
+++ b/create.html
@@ -696,7 +696,7 @@ $(function () {
               class="bx--btn__icon">
               <path d="M27.45,15.11l-22-11a1,1,0,0,0-1.08.12,1,1,0,0,0-.33,1L7,16,4,26.74A1,1,0,0,0,5,28a1,1,0,0,0,.45-.11l22-11a1,1,0,0,0,0-1.78Zm-20.9,10L8.76,17H18V15H8.76L6.55,6.89,24.76,16Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
             </svg>
-            Request publication
+            Ask publication
           </button>
         `);
 
@@ -709,7 +709,6 @@ $(function () {
     } else {
         $("#pedal-published option").prop("disabled", false);
     }
-
 
 });
 </script>
