--- a/create.html
+++ b/create.html
@@ -129,17 +129,13 @@
         <!-- Pedal preview -->
         <div id="preview">
 
-            <label>Status 
-<div id="pedal-status">
-  <button class="status-btn" data-value="draft">Draft</button>
-  <button class="status-btn" data-value="private">Private</button>
-  <button class="status-btn" data-value="reviewing">Reviewing</button>
-  <button class="status-btn" data-value="public">Public</button>
-</div>
-<input type="hidden" id="pedal-published" value="draft">
-
-<div id="status-buttons"></div>
-
+            <label>Status <select id="pedal-published">
+                    <option value="draft">Draft</option>
+                    <option value="private">Private</option>
+                    <option value="reviewing">Reviewing</option>
+                    <option value="public">Public</option>
+                </select>
+                <span id="status-buttons" style="margin-left:10px;"></span>
             </label><br><br>
             <button class="bx--btn bx--btn--sm bx--btn--secondary" id="toggle-preview" style="color:white;">
                 <svg fill="white" class="icon-eye" xmlns="http://www.w3.org/2000/svg" 
@@ -661,95 +657,39 @@ $("#editor, #controls").on("input change keyup", "input, select, textarea", func
 
 <script>
 // Handle moderation flow
-// $(function () {
-//     // Get the user from parent window
-//     let userFromParent = { role: "user" }; // fallback
-//     if (parent && parent.window && parent.window.currentUser) {
-//         userFromParent = parent.window.currentUser;
-//     }
-
-//     const userRole = userFromParent.role;
-//     console.log("Current user role (from parent):", userRole);
-
-//     if (userRole !== "admin") {
-//         // Disable options not allowed for regular users
-//         $("#pedal-published option").each(function() {
-//             const val = $(this).val();
-//             if (val !== "draft" && val !== "private") {
-//                 $(this).prop("disabled", true);
-//             }
-//         });
-
-//         // Ensure a valid default selection
-//         const selected = $("#pedal-published").val();
-//         if (selected !== "draft" && selected !== "private") {
-//             $("#pedal-published").val("draft");
-//         }
-
-//         // Add status buttons for requesting publication
-//         $("#status-buttons").append(`
-//           <button class="bx--btn bx--btn--sm bx--btn--primary" id="request-publication">
-//             <svg
-//               focusable="false"
-//               xmlns="http://www.w3.org/2000/svg"
-//               fill="white"
-//               width="16"
-//               height="16"
-//               viewBox="0 0 32 32"
-//               aria-hidden="true"
-//               class="bx--btn__icon">
-//               <path d="M27.45,15.11l-22-11a1,1,0,0,0-1.08.12,1,1,0,0,0-.33,1L7,16,4,26.74A1,1,0,0,0,5,28a1,1,0,0,0,.45-.11l22-11a1,1,0,0,0,0-1.78Zm-20.9,10L8.76,17H18V15H8.76L6.55,6.89,24.76,16Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-//             </svg>
-//             Ask publication
-//           </button>
-//         `);
-
-//         // Button click handler
-//         $("#request-publication").on("click", function () {
-//             console.log("Requesting publication...");
-//             // TODO: call backend API
-//         });
-
-//     } else {
-//         $("#pedal-published option").prop("disabled", false);
-//     }
-
-// });
-
-
-$(function() {
-    let userRole = "user"; // fallback
-    if (parent?.window?.currentUser?.role) {
-        userRole = parent.window.currentUser.role;
+$(function () {
+    // Get current user from parent
+    let userFromParent = { role: "user" }; // fallback
+    if (parent && parent.window && parent.window.currentUser) {
+        userFromParent = parent.window.currentUser;
     }
 
-    const allowedForUser = ["draft", "private"];
-    const currentVal = $("#pedal-published").val();
+    const userRole = userFromParent.role;
+    console.log("Current user role (from parent):", userRole);
 
-    // Show/hide buttons based on role
-    $("#pedal-status .status-btn").each(function() {
-        const val = $(this).data("value");
-        if (userRole !== "admin" && !allowedForUser.includes(val)) {
-            $(this).hide(); // hide disallowed for users
+    const $select = $("#pedal-published");
+    const userAllowed = ["draft", "private"]; // only these for regular users
+
+    // Build dropdown for users
+    if (userRole !== "admin") {
+        $select.find("option").each(function () {
+            const textLower = $(this).text().trim().toLowerCase();
+            if (!userAllowed.includes(textLower)) {
+                $(this).hide(); // hide options instead of disabling
+            } else {
+                $(this).show();
+            }
+        });
+
+        // Ensure valid selection
+        const currentText = $select.find("option:selected").text().trim().toLowerCase();
+        if (!userAllowed.includes(currentText)) {
+            $select.val($select.find("option:visible").first().val());
         }
-    });
 
-    // Highlight current status
-    $("#pedal-status .status-btn").removeClass("selected");
-    $(`#pedal-status .status-btn[data-value="${currentVal}"]`).addClass("selected");
-
-    // Click handler for status buttons
-    $("#pedal-status .status-btn").on("click", function() {
-        const val = $(this).data("value");
-        $("#pedal-published").val(val); // hidden input holds true value
-        $("#pedal-status .status-btn").removeClass("selected");
-        $(this).addClass("selected");
-        buildJSON(); // update JSON whenever status changes
-    });
-
-    // Add "Ask Publication" button for users when status is draft or private
-    if (userRole !== "admin" && !$("#request-publication").length) {
-        const $btn = $(`
+        // Add "Ask publication" button if not already added
+        if ($("#status-buttons").length && !$("#request-publication").length) {
+            $("#status-buttons").append(`
           <button class="bx--btn bx--btn--sm bx--btn--primary" id="request-publication">
             <svg
               focusable="false"
@@ -764,29 +704,20 @@ $(function() {
             </svg>
             Ask publication
           </button>
-        `);
-        $("#status-buttons").append($btn);
+            `);
 
-        $btn.on("click", function() {
-            console.log("Requesting publication...");
-            // TODO: call backend API
-            // e.g., mark pedal as "reviewing" in backend
-        });
-
-        // Optionally hide the button if status is already "reviewing" or "public"
-        function updateRequestButtonVisibility() {
-            const val = $("#pedal-published").val();
-            $btn.toggle(val === "draft" || val === "private");
+            $("#request-publication").on("click", function () {
+                console.log("Requesting publication...");
+                // TODO: call backend API
+            });
         }
-
-        updateRequestButtonVisibility();
-        $("#pedal-status .status-btn").on("click", updateRequestButtonVisibility);
+    } else {
+        // Admin sees all options
+        $select.find("option").show();
     }
 });
-
-
-
 </script>
+
 
 
 
