--- a/create.html
+++ b/create.html
@@ -140,16 +140,35 @@
 
             <label>Status</label>
             <div id="pedal-published-wrapper" class="custom-dropdown">
-            <button id="pedal-published-button">Draft</button>
-            <ul id="pedal-published-options" class="dropdown-options">
-                <li data-value="draft">Draft</li>
-                <li data-value="private">Private</li>
-                <li data-value="reviewing">Reviewing</li>
-                <li data-value="public">Public</li>
+            <button class="bx--btn bx--btn--sm bx--btn--secondary" id="pedal-published-button">Draft</button><span id="status-buttons" style="margin-left:10px;"></span>
+            <ul id="pedal-published-options" class="dropdown-options"><br>
+                <li data-value="draft">
+                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+                        <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                    </svg>
+                    Draft
+                </li>
+                <li data-value="private">
+                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+                        <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                    </svg>
+                    Private
+                </li>
+                <li data-value="reviewing">
+                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+                        <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                    </svg>
+                    Reviewing
+                </li>
+                <li data-value="public">
+                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+                        <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                    </svg>
+                    Public
+                </li>
             </ul>
             </div>
-            <span id="status-buttons" style="margin-left:10px;"></span>
-
+            <br>
 
             <button class="bx--btn bx--btn--sm bx--btn--secondary" id="toggle-preview" style="color:white;">
                 <svg fill="white" class="icon-eye" xmlns="http://www.w3.org/2000/svg" 
