--- a/create.html
+++ b/create.html
@@ -140,27 +140,27 @@
 
             <label>Status</label>
             <div id="pedal-published-wrapper" class="custom-dropdown">
-            <button class="bx--btn bx--btn--sm bx--btn--secondary" id="pedal-published-button">Draft</button><span id="status-buttons" style="margin-left:10px;"></span>
+            <button class="bx--btn bx--btn--sm bx--btn--secondary" style="width:19px!important;" id="pedal-published-button">Draft</button><span id="status-buttons" style="margin-left:10px;"></span>
             <ul id="pedal-published-options" class="dropdown-options"><br>
-                <li data-value="draft">
+                <li style="cursor:pointer;" data-value="draft">
                     <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                         <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
                     Draft
                 </li>
-                <li data-value="private">
+                <li style="cursor:pointer;" data-value="private">
                     <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                         <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
                     Private
                 </li>
-                <li data-value="reviewing">
+                <li style="cursor:pointer;" data-value="reviewing">
                     <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                         <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
                     Reviewing
                 </li>
-                <li data-value="public">
+                <li style="cursor:pointer;" data-value="public">
                     <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                         <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
