--- a/create.html
+++ b/create.html
@@ -204,7 +204,7 @@
 
     <!-- JSON (to be removed) -->
     <!-- <h2>Generated JSON</h2><br><br> -->
-    <textarea id="json-output" style="width:100%;height:300px;font-family:monospace;"></textarea>
+    <!-- <textarea id="json-output" style="width:100%;height:300px;font-family:monospace;"></textarea> -->
    
 
 
