--- a/create.html
+++ b/create.html
@@ -129,15 +129,6 @@
         <!-- Pedal preview -->
         <div id="preview">
 
-            <!-- <label>Status <select id="pedal-published">
-                    <option value="draft">Draft</option>
-                    <option value="private">Private</option>
-                    <option value="reviewing">Reviewing</option>
-                    <option value="public">Public</option>
-                </select>
-                <span id="status-buttons" style="margin-left:10px;"></span>
-            </label><br><br> -->
-
             <label>Status</label>
             <div id="pedal-published-wrapper" class="custom-dropdown">
             <button class="bx--btn bx--btn--sm bx--btn--secondary" style="width:19px!important;" id="pedal-published-button">Draft</button><span id="status-buttons" style="margin-left:10px;"></span>
@@ -204,7 +195,7 @@
 
     <!-- JSON (to be removed) -->
     <!-- <h2>Generated JSON</h2><br><br> -->
-    <!-- <textarea id="json-output" style="width:100%;height:300px;font-family:monospace;"></textarea> -->
+    <textarea id="json-output" style="width:100%;height:300px;font-family:monospace;"></textarea>
    
 
 
