--- a/create.html
+++ b/create.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Pedal Builder</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css" />
     <link rel="stylesheet" href="style.css">
     <script src="utils.js"></script>
@@ -681,6 +682,33 @@ $("#editor, #controls").on("input change keyup", "input, select, textarea", func
 
 
 <script>
+// // Handle moderation flow
+// $(function() {
+//   let userRole = parent?.window?.currentUser?.role || "user";
+//   const allowedForUser = userRole === "admin" ? ["draft","private","reviewing","public"] : ["draft","private"];
+
+//   $("#pedal-published-options li").each(function() {
+//     if (!allowedForUser.includes($(this).data("value"))) $(this).hide();
+//   });
+
+//   $("#pedal-published-options li").on("click", function() {
+//     $("#pedal-published-button").text($(this).text());
+//     buildJSON(); // always use .text().toLowerCase() for JSON
+//   });
+
+//   // Ask publication button
+//   if (userRole !== "admin" && !$("#request-publication").length) {
+//     $("#status-buttons").append(`
+//       <button class="bx--btn bx--btn--sm bx--btn--primary" id="request-publication">
+//         <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="white" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+//           <path d="M27.45,15.11l-22-11a1,1,0,0,0-1.08.12,1,1,0,0,0-.33,1L7,16,4,26.74A1,1,0,0,0,5,28a1,1,0,0,0,.45-.11l22-11a1,1,0,0,0,0-1.78Zm-20.9,10L8.76,17H18V15H8.76L6.55,6.89,24.76,16Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+//         </svg>
+//         Ask publication
+//       </button>
+//     `);
+//   }
+// });
+
 // Handle moderation flow
 $(function() {
   let userRole = parent?.window?.currentUser?.role || "user";
@@ -705,6 +733,32 @@ $(function() {
         Ask publication
       </button>
     `);
+
+    // SweetAlert2 confirmation
+    $("#request-publication").on("click", function() {
+      Swal.fire({
+        title: 'Request Publication?',
+        text: "Do you want to submit this pedal for review?",
+        icon: 'question',
+        showCancelButton: true,
+        confirmButtonText: 'Yes, submit',
+        cancelButtonText: 'Cancel'
+      }).then((result) => {
+        if (result.isConfirmed) {
+          // Update published status
+          $("#pedal-published-button").text("reviewing");
+          buildJSON(); // update JSON with new status
+
+          Swal.fire({
+            title: 'Submitted!',
+            text: 'Your pedal is now under review.',
+            icon: 'success',
+            timer: 2000,
+            showConfirmButton: false
+          });
+        }
+      });
+    });
   }
 });
 
