--- a/create.html
+++ b/create.html
@@ -737,7 +737,7 @@ $(function() {
     // SweetAlert2 confirmation
     $("#request-publication").on("click", function() {
       Swal.fire({
-        title: 'ASk for publication?',
+        title: 'Ask for publication?',
         text: "Do you want to submit this gear for review to be publicly available in the catalog?",
         showCancelButton: true,
         confirmButtonText: 'Yes, submit',
@@ -750,13 +750,12 @@ $(function() {
       }).then((result) => {
         if (result.isConfirmed) {
           // Update published status
-          $("#pedal-published-button").text("reviewing");
+          $("#pedal-published-button").text("Reviewing");
           buildJSON(); // update JSON with new status
 
           Swal.fire({
             title: 'Done!',
             text: 'Click Save to finalize your submission.',
-            icon: 'success',
             timer: 2000,
             showConfirmButton: false
           });
