--- a/create.html
+++ b/create.html
@@ -196,7 +196,13 @@
 
     <!-- JSON (to be removed) -->
     <!-- <h2>Generated JSON</h2><br><br> -->
-    <!-- <textarea id="json-output" style="width:100%;height:300px;font-family:monospace;"></textarea> -->
+    <textarea id="json-output" style="width:100%;height:300px;font-family:monospace;"></textarea>
+    <script>
+        $(function(){
+            const isAdmin = (parent?.window?.currentUser?.role || '').toLowerCase() === 'admin';
+            $('#json-output').toggle(isAdmin);
+        });
+    </script>
    
 
 
